# Xinrun_Final_Project

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/Xinrun_Final_Project_Package/: Xinrun_Final_Project_Package.py  __init__.py
tests/: test_Xinrun_Final_Project_Package.py
