[tool.poetry]
name = "Xinrun_Final_Project_Package"
version = "0.1.0"
description = "finalproject"
authors = ["XinrunShan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
